<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RevLocation</string>
    <string name="action_settings">Settings</string>
    <string name="register_text">Register locations</string>
    <string name="button_register">Register</string>
    <string name="unregister_text">Unregister locations</string>
    <string name="button_unregister">Unregister</string>
    <string name="my_locations">My current location</string>

</resources>
